# nnInteractive

./: .dockerignore  CLAUDE.md  SERVER_CLIENT.md  pyproject.toml  readme.md
.github/workflows/: docker-publish.yml
client/: pyproject.toml
client/nnInteractive/inference/remote/: remote_session.py  serialization.py
client/nnInteractive_v2/inference/remote/: __init__.py  _full_required.py  _protocol.py  remote_session.py  serialization.py
nnInteractive/inference/: inference_session.py
nnInteractive/inference/cvpr2025_challenge_baseline/: predict.py
nnInteractive/inference/server/: app.py  main.py
nnInteractive/interaction/: point.py
nnInteractive/supervoxel/src/: reader.py  supervoxel.py
nnInteractive/trainer/: nnInteractiveTrainer.py
nnInteractive_v1/: __init__.py
nnInteractive_v1/inference/: inference_session.py
nnInteractive_v1/inference/cvpr2025_challenge_baseline/: predict.py
nnInteractive_v2/: model_management.py
nnInteractive_v2/inference/: inference_session.py
nnInteractive_v2/inference/cvpr2025_challenge_baseline/: predict.py
nnInteractive_v2/inference/server/: DOCKER.md  Dockerfile  app.py  docker-entrypoint.sh  main.py
nnInteractive_v2/interaction/: point.py
nnInteractive_v2/supervoxel/: README.md
nnInteractive_v2/supervoxel/src/: metadata.py  reader.py  run.py  supervoxel.py
nnInteractive_v2/supervoxel/src/sam2/sam2/: automatic_mask_generator.py  benchmark.py  build_sam.py  sam2_image_predictor.py  sam2_video_predictor.py  sam2_video_predictor_legacy.py
nnInteractive_v2/supervoxel/src/sam2/sam2/modeling/: memory_attention.py  memory_encoder.py  position_encoding.py  sam2_base.py  sam2_utils.py
nnInteractive_v2/supervoxel/src/sam2/sam2/modeling/backbones/: hieradet.py  utils.py
nnInteractive_v2/supervoxel/src/sam2/sam2/modeling/sam/: mask_decoder.py  prompt_encoder.py  transformer.py
nnInteractive_v2/supervoxel/src/sam2/sam2/utils/: misc.py
nnInteractive_v2/supervoxel/src/sam2/training/: loss_fns.py  optimizer.py  train.py  trainer.py
nnInteractive_v2/supervoxel/src/sam2/training/dataset/: sam2_datasets.py  transforms.py  utils.py  vos_dataset.py  vos_raw_dataset.py  vos_sampler.py  vos_segment_loader.py
nnInteractive_v2/supervoxel/src/sam2/training/model/: sam2.py
nnInteractive_v2/supervoxel/src/sam2/training/scripts/: sav_frame_extraction_submitit.py
nnInteractive_v2/supervoxel/src/sam2/training/utils/: checkpoint_utils.py  data_utils.py  distributed.py  logger.py  train_utils.py
nnInteractive_v2/trainer/: nnInteractiveTrainer.py
nnInteractive_v2/utils/: bboxes.py  checkpoint_cleansing.py  crop.py  erosion_dilation.py  inference_helpers.py  os_shennanigans.py  rounding.py
