[project]
name = "nnInteractive_v2"
version = "2.5.0"
requires-python = ">=3.10"
description = "Inference code for nnInteractive_v2"
readme = "readme.md"
license = { file = "LICENSE" }
authors = [
    { name = "Fabian Isensee", email = "f.isensee@dkfz-heidelberg.de"},
    { name = "Helmholtz Imaging Applied Computer Vision Lab" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
keywords = [
    'deep learning',
    'image segmentation',
    'semantic segmentation',
    'medical image analysis',
    'medical image segmentation',
    'nnU-Net',
    'nnunet'
]
dependencies = [
    # Full install: the in-process inference engine AND the official server, on top
    # of the complete torch / nnU-Net stack. It depends on `nninteractive-client`,
    # which provides the torch-free remote client (`nnInteractive.inference.remote`)
    # and the shared wire protocol/serialization; the two share the `nnInteractive`
    # namespace via PEP 420 namespace packages.
    #
    # If you ONLY need to drive a remote server, install the lightweight client
    # instead and skip torch entirely:
    #   pip install nninteractive-client
    "nninteractive-client==2.5.1",  # torch-free remote client + shared wire protocol (numpy/httpx/blosc2). Pinned in lockstep — bump together with this package's version.
    "nnunetv2>=2.7.0",
    "torch>=2.1.2,!=2.9.*",
    "acvl-utils>=0.2.3,<0.3",  # 0.3 may bring breaking changes. Careful!
    "batchgenerators>=0.25.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "blosc2",  # used directly by the local engine (point.py, crop.py, inference_session, server)
    "huggingface_hub",  # model manifest discovery + checkpoint downloads (model_management)
    "numpy",
]

[project.urls]
homepage = "https://github.com/MIC-DKFZ/nnInteractive"

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pre-commit"
]

[project.scripts]
nninteractive-server = "nnInteractive_v2.inference.server.main:main"
nninteractive-available-models = "nnInteractive_v2.model_management:available_models_cli"
nninteractive-download-model = "nnInteractive_v2.model_management:download_model_cli"

[build-system]
requires = ["setuptools>=67.8.0"]
build-backend = "setuptools.build_meta"

[tool.black]
# Keep in sync with .pre-commit-config.yaml (black is run there with --line-length 120).
# Without this, a bare `black nnInteractive/` uses black's default line length (88) and would
# reformat the whole codebase.
line-length = 120

[tool.codespell]
skip = '.git,*.pdf,*.svg'
#
# ignore-words-list = ''

[tool.setuptools.packages.find]
where = ["."]
include = ["nnInteractive_v2*"]
# `nnInteractive_v2` and `nnInteractive_v2.inference` are PEP 420 namespace packages
# (no __init__.py) shared with the nnInteractive_v2-client distribution, so namespace
# discovery is required. Exclude the client-owned remote subtree (shipped by
# nnInteractive_v2-client) and the separately-packaged supervoxel module.
namespaces = true
exclude = ["nnInteractive_v2.inference.remote*", "nnInteractive_v2.supervoxel*"]
